# manufacture

./: README.md
account_move_line_mrp_info/: README.rst  __manifest__.py  hooks.py
account_move_line_mrp_info/i18n/: account_move_line_mrp_info.pot  nl.po  pt_BR.po
account_move_line_mrp_info/models/: account_move_line.py
account_move_line_mrp_info/readme/: CONTRIBUTORS.md
account_move_line_mrp_info/tests/: test_mrp_journal_items.py
account_move_line_mrp_info/views/: account_move_line_view.xml  mrp_production_view.xml
mrp_attachment_mgmt/: README.rst  __manifest__.py
mrp_attachment_mgmt/i18n/: es.po  hr.po  hr_HR.po  it.po  mrp_attachment_mgmt.pot
mrp_attachment_mgmt/models/: mrp_bom.py  mrp_production.py  mrp_workorder.py  product.py
mrp_attachment_mgmt/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
mrp_attachment_mgmt/tests/: common.py  test_mrp_attachment_mgmt.py
mrp_attachment_mgmt/views/: mrp_bom_view.xml  mrp_production_views.xml  product_views.xml  workorder_attachments_views.xml
mrp_bom_attribute_match/: README.rst  __manifest__.py
mrp_bom_attribute_match/i18n/: es.po  hr.po  it.po  mrp_bom_attribute_match.pot  pt_BR.po  tr.po
mrp_bom_attribute_match/models/: mrp_bom.py  product.py
mrp_bom_attribute_match/readme/: CONTRIBUTORS.md
mrp_bom_attribute_match/reports/: mrp_report_bom_structure.py
mrp_bom_attribute_match/tests/: __init__.py  common.py  test_mrp_bom_attribute_match.py  test_mrp_bom_line.py
mrp_bom_component_menu/: README.rst  __manifest__.py
mrp_bom_component_menu/i18n/: mrp_bom_component_menu.pot  pt_BR.po
mrp_bom_component_menu/readme/: CONTRIBUTORS.md
mrp_bom_component_menu/views/: mrp_bom_component_view.xml
mrp_bom_hierarchy/: README.rst  __manifest__.py
mrp_bom_hierarchy/i18n/: fr.po  mrp_bom_hierarchy.pot
mrp_bom_hierarchy/model/: mrp_bom.py  mrp_bom_line.py
mrp_bom_hierarchy/readme/: CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
mrp_bom_hierarchy/view/: mrp_bom.xml
mrp_bom_image/: README.rst  __manifest__.py
mrp_bom_image/i18n/: mrp_bom_image.pot  pt_BR.po
mrp_bom_image/readme/: CONTRIBUTORS.md  DESCRIPTION.md
mrp_bom_image/views/: view_mrp_bom.xml
mrp_bom_line_formula_quantity/: README.rst  __manifest__.py
mrp_bom_line_formula_quantity/i18n/: mrp_bom_line_formula_quantity.pot  nl.po  pt_BR.po
mrp_bom_line_formula_quantity/models/: mrp_bom_line.py  mrp_production.py
mrp_bom_line_formula_quantity/readme/: CONFIGURE.md  DESCRIPTION.md  USAGE.md
mrp_bom_line_formula_quantity/tests/: test_mrp_production.py
mrp_bom_line_formula_quantity/views/: mrp_bom_views.xml
mrp_bom_location/: README.rst  __manifest__.py
mrp_bom_location/i18n/: mrp_bom_location.pot  pt_BR.po  tr.po
mrp_bom_location/models/: mrp_bom.py
mrp_bom_location/readme/: CONTRIBUTORS.md
mrp_bom_location/report/: bom_structure.py
mrp_bom_note/: README.rst  __manifest__.py
mrp_bom_select_product_variant/: README.rst  __manifest__.py
mrp_bom_tracking/: README.rst  __manifest__.py
mrp_bom_widget_section_and_note_one2many/: README.rst  __manifest__.py
mrp_byproduct_auto_create_lot/: README.rst  __manifest__.py
mrp_default_workorder_time/: README.rst  __manifest__.py
mrp_lot_number_propagation/: README.rst  __manifest__.py
mrp_lot_production_date/: README.rst  __manifest__.py
mrp_mass_production_order/: README.rst  __manifest__.py
mrp_multi_level/: README.rst  __manifest__.py
mrp_multi_level_estimate/: README.rst  __manifest__.py
mrp_production_allow_recursive/: README.rst  __manifest__.py
mrp_production_auto_validate/: README.rst  __manifest__.py
mrp_production_back_to_draft/: README.rst  __manifest__.py
mrp_production_location_picking_type/: README.rst  __manifest__.py
mrp_production_picking_type_from_route/: README.rst  __manifest__.py
mrp_production_putaway_strategy/: README.rst  __manifest__.py
mrp_repair_order/: README.rst  __manifest__.py
mrp_restrict_lot/: README.rst  __manifest__.py
mrp_sale_info/: README.rst  __manifest__.py
mrp_subcontracting_inhibit/: README.rst  __manifest__.py
mrp_subcontracting_purchase_link/: README.rst  __manifest__.py  hooks.py
mrp_tag/: README.rst  __manifest__.py
mrp_unbuild_move_link/: README.rst  __manifest__.py
mrp_unbuild_subcontracting/: README.rst  __manifest__.py
mrp_unbuild_valuation_layer_link/: README.rst  __manifest__.py
mrp_warehouse_calendar/: README.rst  __manifest__.py
mrp_workorder_blocking_time/: README.rst  __manifest__.py
printing_auto_mrp/: README.rst  __manifest__.py
quality_control_oca/: README.rst  __manifest__.py
quality_control_stock_oca/: README.rst  __manifest__.py
sale_mrp_bom_menu/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
(+443 files in other folders)
