[project]
name = "odoo-addons-oca-manufacture"
version = "18.0.20250413.0"
dependencies = [
    "odoo-addon-account_move_line_mrp_info==18.0.*",
    "odoo-addon-mrp_bom_image==18.0.*",
    "odoo-addon-mrp_bom_location==18.0.*",
    "odoo-addon-mrp_bom_note==18.0.*",
    "odoo-addon-mrp_bom_tracking==18.0.*",
    "odoo-addon-mrp_lot_production_date==18.0.*",
    "odoo-addon-mrp_multi_level==18.0.*",
    "odoo-addon-mrp_multi_level_estimate==18.0.*",
    "odoo-addon-mrp_package_propagation==18.0.*",
    "odoo-addon-mrp_production_note==18.0.*",
    "odoo-addon-mrp_sale_info==18.0.*",
    "odoo-addon-mrp_subcontracting_purchase_link==18.0.*",
    "odoo-addon-mrp_warehouse_calendar==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
