[project]
name = "odoo-addons-oca-manufacture"
version = "18.0.20251105.0"
dependencies = [
    "odoo-addon-account_move_line_mrp_info==18.0.*",
    "odoo-addon-mrp_attachment_mgmt==18.0.*",
    "odoo-addon-mrp_bom_attribute_match==18.0.*",
    "odoo-addon-mrp_bom_component_menu==18.0.*",
    "odoo-addon-mrp_bom_hierarchy==18.0.*",
    "odoo-addon-mrp_bom_image==18.0.*",
    "odoo-addon-mrp_bom_line_formula_quantity==18.0.*",
    "odoo-addon-mrp_bom_location==18.0.*",
    "odoo-addon-mrp_bom_note==18.0.*",
    "odoo-addon-mrp_bom_select_product_variant==18.0.*",
    "odoo-addon-mrp_bom_tracking==18.0.*",
    "odoo-addon-mrp_bom_widget_section_and_note_one2many==18.0.*",
    "odoo-addon-mrp_lot_number_propagation==18.0.*",
    "odoo-addon-mrp_lot_production_date==18.0.*",
    "odoo-addon-mrp_mass_production_order==18.0.*",
    "odoo-addon-mrp_multi_level==18.0.*",
    "odoo-addon-mrp_multi_level_estimate==18.0.*",
    "odoo-addon-mrp_package_propagation==18.0.*",
    "odoo-addon-mrp_production_allow_recursive==18.0.*",
    "odoo-addon-mrp_production_auto_validate==18.0.*",
    "odoo-addon-mrp_production_back_to_draft==18.0.*",
    "odoo-addon-mrp_production_location_picking_type==18.0.*",
    "odoo-addon-mrp_production_note==18.0.*",
    "odoo-addon-mrp_production_picking_type_from_route==18.0.*",
    "odoo-addon-mrp_production_putaway_strategy==18.0.*",
    "odoo-addon-mrp_repair_order==18.0.*",
    "odoo-addon-mrp_restrict_lot==18.0.*",
    "odoo-addon-mrp_sale_info==18.0.*",
    "odoo-addon-mrp_subcontracting_inhibit==18.0.*",
    "odoo-addon-mrp_subcontracting_purchase_link==18.0.*",
    "odoo-addon-mrp_tag==18.0.*",
    "odoo-addon-mrp_unbuild_move_link==18.0.*",
    "odoo-addon-mrp_unbuild_valuation_layer_link==18.0.*",
    "odoo-addon-mrp_warehouse_calendar==18.0.*",
    "odoo-addon-printing_auto_mrp==18.0.*",
    "odoo-addon-quality_control_oca==18.0.*",
    "odoo-addon-quality_control_stock_oca==18.0.*",
    "odoo-addon-sale_mrp_bom_menu==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
